Bug 714115 - CF_HTML not being used when comma as a decimal point. r=roc